@@ -774,6 +774,33 @@ test_loopexit(void)
 }
 
 static void
+test_loopexit_multiple(void)
+{
+	struct timeval tv;
+	struct event_base *base;
+
+	setup_test("Loop Multiple exit: ");
+
+	base = event_base_new();
+	
+	tv.tv_usec = 0;
+	tv.tv_sec = 1;
+	event_base_loopexit(base, &tv);
+
+	tv.tv_usec = 0;
+	tv.tv_sec = 2;
+	event_base_loopexit(base, &tv);
+
+	event_base_dispatch(base);
+
+	event_base_free(base);
+	
+	test_ok = 1;
+
+	cleanup_test();
+}
+
+static void
 break_cb(int fd, short events, void *arg)
 {
 	test_ok = 1;
@@ -1602,6 +1629,8 @@ main (int argc, char **argv)
 #endif
 	test_loopexit();
 	test_loopbreak();
+
+	test_loopexit_multiple();
 
         test_nonpersist_readd();
 
